--- a/index.html
+++ b/index.html
@@ -17,13 +17,21 @@
 </head>
 <body>
 
-  Home
-  About
-  Contact
-  Blog
-  Careers
+  <header class="header container">
+    <a href="index.html"><img src="images/logo.svg" alt="Easybank logo"></a>
 
-  Request Invite
+    <nav>
+      <ul class="header-menu">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Careers</a></li>
+      </ul>
+    </nav>
+
+    <a href="#" class="botao">Request Invite</a>
+  </header>
 
 
 
