--- a/index.html
+++ b/index.html
@@ -33,14 +33,20 @@
     <a href="#" class="botao">Request Invite</a>
   </header>
 
-
-
-  Next generation digital banking
-
-  Take your financial life online. Your Easybank account will be a one-stop-shop 
-  for spending, saving, budgeting, investing, and much more.
-
-  Request Invite
+    <section class="introducao-bg">
+      <div class="introducao container">
+        <div class="introducao-content">
+          <h1>Next generation digital banking</h1>
+          <p>Take your financial life online. Your Easybank account will be a one-stop-shop 
+            for spending, saving, budgeting, investing, and much more.</p>
+            <a href="#" class="botao">Request Invite</a>
+        </div>
+  
+        <div class="introducao-mockup">
+          <img src="images/image-mockups.png" alt="">
+        </div>
+      </div>
+    </section>
 
 
 
