--- a/index.html
+++ b/index.html
@@ -82,32 +82,60 @@
     </div>
   </section>
 
+  <section class="articles-bg">
+    <div class="articles container">
+      <h2>Latest Articles</h2>
+
+      <div class="articles-items">
+        <div class="article-item">
+          <div class="item-image">
+            <img src="images/image-currency.jpg" alt="">
+          </div>
+          <div class="item-content">
+            <span>By Claire Robinson</span>
+            <h3>Receive money in any currency with no fees</h3>
+            <p>The world is getting smaller and we’re becoming more mobile. So why should you be
+              forced to only receive money in a single …</p>
+          </div>
+        </div>
   
-
-  Latest Articles
-
-  By Claire Robinson
-  Receive money in any currency with no fees
-  The world is getting smaller and we’re becoming more mobile. So why should you be 
-  forced to only receive money in a single …
-
-  By Wilson Hutton
-  Treat yourself without worrying about money
-  Our simple budgeting feature allows you to separate out your spending and set 
-  realistic limits each month. That means you …
-
-  By Wilson Hutton
-  Take your Easybank card wherever you go
-  We want you to enjoy your travels. This is why we don’t charge any fees on purchases 
-  while you’re abroad. We’ll even show you …
-
-  By Claire Robinson
-  Our invite-only Beta accounts are now live!
-  After a lot of hard work by the whole team, we’re excited to launch our closed beta. 
-  It’s easy to request an invite through the site ...
-
+        <div class="article-item">
+          <div class="item-image">
+            <img src="images/image-restaurant.jpg" alt="">
+          </div>
+          <div class="item-content">
+            <span>By Wilson Hutton</span>
+            <h3>Treat yourself without worrying about money</h3>
+            <p>Our simple budgeting feature allows you to separate out your spending and set realistic limits each month. That means you …</p>
+          </div>
+        </div>
   
-
+        <div class="article-item">
+          <div class="item-image">
+            <img src="images/image-plane.jpg" alt="">
+          </div>
+          <div class="item-content">
+            <span>By Wilson Hutton</span>
+            <h3>Take your Easybank card wherever you go</h3>
+            <p>We want you to enjoy your travels. This is why we don’t charge any fees on purchases while you’re abroad. We’ll even show you …</p>
+          </div>
+        </div>
+  
+        <div class="article-item">
+          <div class="item-image">
+            <img src="images/image-confetti.jpg" alt="">
+          </div>
+          <div class="item-content">
+            <span>By Claire Robinson</span>
+            <h3>Our invite-only Beta accounts are now live!</h3>
+            <p>After a lot of hard work by the whole team, we’re excited to launch our closed beta.
+              It’s easy to request an invite through the site ...</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  
   About Us
   Contact
   Blog
