--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 
   <header class="header container">
-    <a href="index.html"><img src="images/logo.svg" alt="Easybank logo"></a>
+    <a href="index.html" class="header-logo"><img src="images/logo.svg" alt="Easybank logo"></a>
 
     <nav>
       <ul class="header-menu">
@@ -30,7 +30,13 @@
       </ul>
     </nav>
 
-    <a href="#" class="botao">Request Invite</a>
+    <a href="#" class="header-botao botao">Request Invite</a>
+
+    <a href="#" class="menu-hamburguer">
+      <span></span>
+      <span></span>
+      <span></span>
+    </a>
   </header>
 
   <section class="introducao-bg">
