--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <a href="index.html" class="header-logo"><img src="images/logo.svg" alt="Easybank logo"></a>
 
     <nav>
-      <ul class="header-menu">
+      <ul class="header-menu" data-menu="list">
         <li><a href="#">Home</a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Contact</a></li>
@@ -32,7 +32,7 @@
 
     <a href="#" class="header-botao botao">Request Invite</a>
 
-    <a href="#" class="menu-hamburguer">
+    <a href="#" class="menu-hamburguer" data-menu="button">
       <span></span>
       <span></span>
       <span></span>
@@ -178,5 +178,7 @@
       <span class="footer-copyright">© Easybank. All Rights Reserved</span>
     </div>
   </footer>
+
+  <script type="module" src="js/script.js"></script>
 </body>
 </html>
